k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: igress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          #- path: /
            #backend:
              #serviceName: pgadmin-cluster-ip-service
             # servicePort: 5050
          - path: /
            backend:
              serviceName: polls-cluster-ip-service
              servicePort: 8080


---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-service
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    #nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/use-regex: 'true'
#    nginx.ingress.kubernetes.io/rewrite-target: /$1

#spec:
#  rules:
#    - http:
#        paths:
#          - path: /xyz/?(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: polls-cluster-ip-service
#                port:
#                  number: 8080
#          - path: /?(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: pgadmin-cluster-ip-service
#                port:
#                  number: 5050
